@@ -23,7 +23,7 @@ import java.util.List;
 import java.util.stream.Collectors;
 import org.junit.jupiter.api.Test;
 
-public class ItemExtractorUtilsTest {
+class ItemExtractorUtilsTest {
 
   @Test
   void testSetAbout() {
@@ -74,11 +74,10 @@ public class ItemExtractorUtilsTest {
     List<LiteralType> output = ItemExtractorUtils.extractLabels(labels, LiteralType::new);
 
     for (Label label : labels) {
-      List<LiteralType> result = output.stream().filter(x -> x.getString().equals(label.getValue())).collect(
-          Collectors.toList());
+      List<LiteralType> result = output.stream().filter(x -> x.getString().equals(label.getValue())).toList();
 
       assertEquals(1, result.size());
-      assertEquals(label.getLang(), result.get(0).getLang().getLang());
+      assertEquals(label.getLang(), result.getFirst().getLang().getLang());
     }
   }
 
